modify the codes  to make it works

--- a/data/coco.yaml
+++ b/data/coco.yaml
@@ -1,7 +1,7 @@
 # train and val datasets (image directory or *.txt file with image paths)
-train: ../coco/train2017.txt  # 118k images
-val: ../coco/val2017.txt  # 5k images
-test: ../coco/test-dev2017.txt  # 20k images for submission to https://competitions.codalab.org/competitions/20794
+train: /nas/thuchk/datasets/coco/train2017.txt  # 118k images
+val: /nas/thuchk/datasets/coco/val2017.txt  # 5k images
+test: /nas/thuchk/datasets/coco/test-dev2017.txt  # 20k images for submission to https://competitions.codalab.org/competitions/20794
 
 # number of classes
 nc: 80
